syntax = "proto3";

package rhm_service;

service RhmService {
  rpc Set(SetRequest) returns (SetResponse);
  rpc Get(GetRequest) returns (GetResponse);
}

message SetRequest {
  string key = 1;
  string value = 2;
}

message SetResponse {
  string result = 1;
}

message GetRequest {
  string key = 1;
}

message GetResponse {
  string value = 1;
  bool found = 2;
}
